# studio

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  eslint.config.js  flake.nix  justfile  package.json  pnpm-lock.yaml  tsconfig.json  turbo.json  web-test-runner.config.js
.changeset/: README.md  ambient-waveform-player.md  config.json  dither-pattern-utilities.md  fix-glitch-border-guard.md  horizontal-temporal-view.md  warm-dithering-strategy.md
.github/: CODEOWNERS
.github/workflows/: ci.yml  release.yml
apps/: mod.just
apps/journal/: index.html  justfile  package.json  vite.config.ts
apps/website/: archive.html  dithering-demo.html  homepage.html  index.html  journal-entry-demo.html  justfile  package.json  tsconfig.json  visualization-demo.html  vite.config.ts
devlog/: 2026-02-04-project-state.md
docs/: HLD-DITHERING-AESTHETIC.md  HLD-VISUAL-MOTIFS-EXPLORATION.md  UX-DESIGN-EXPLORATION.md
docs/analog/: component-ideas.md  design-system.md  journal-format.md  stack.md  study-plan.md
docs/archive/: ADR-DEFERRED-WORLDS.md  DESIGN-SYSTEM-WORLDS.md  GUIDE-CHARACTER-DESIGN.md  README.md  THEORETICAL-FRAMEWORK-WORLDTRAVELING.md
docs/glitch/: ADR-001-architecture.md  ADR-002-pixel-art-border-deferred.md  COLOR-PALETTE-EXPLORATION.md  COMPONENT-API.md  COMPONENT-SPEC-modal-menu.md  DESIGN-SUMMARY.md  DESIGN-SYSTEM.md  HLD-DITHERING-AESTHETIC.md  HLD-VISUAL-MOTIFS-EXPLORATION.md  THEORETICAL-FRAMEWORK.md  archive-spec.md  (+1 more)
services/: Cargo.toml  README.md  justfile
services/.cargo/: config.toml
services/lambdas/api/: Cargo.toml
services/lambdas/api/src/: main.rs
services/lambdas/media-upload/: Cargo.toml
services/lambdas/media-upload/src/: main.rs
services/shared/glitch-core/: Cargo.toml
services/shared/glitch-core/src/: error.rs  lib.rs
services/shared/studio-core/: Cargo.toml
services/shared/studio-core/src/: error.rs  lib.rs
(+13 files in other folders)
