[package]
name = "media-upload"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[[bin]]
name = "bootstrap"
path = "src/main.rs"

[dependencies]
glitch-core = { workspace = true }

aws-config = { workspace = true }
aws-sdk-s3 = { workspace = true }

lambda_runtime = { workspace = true }
lambda_http = { workspace = true }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
